@@ -45,6 +45,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	renamed haxe.rtti.Type to haxe.rtti.CType (with changes in prefix)
 	added haxe.TimerQueue, added haxe.Timer.delay, remove haxe.Timer.delayed
 	flash9 : bugfix, generated interfaces were empty
+	fixed bug while writing block-vars in flash/js
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
